[gd_scene load_steps=57 format=3 uid="uid://et357f7d7gc8"]

[ext_resource type="Script" path="res://day_screen.gd" id="1_67foy"]
[ext_resource type="Texture2D" uid="uid://25s7ke7v6uql" path="res://CardAssets/Basic_Card_Pack-Opening.png" id="2_rxadj"]
[ext_resource type="Texture2D" uid="uid://dhax2l36ytm4p" path="res://CardAssets/Basic_Card_Pack-OpeningLifet.png" id="3_sool3"]
[ext_resource type="Texture2D" uid="uid://bsavtyesmjgjx" path="res://CardAssets/Basic_Card_Pack-OpeningBino.png" id="3_vlid8"]

[sub_resource type="Animation" id="Animation_h7ire"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_pl2nk"]
resource_name = "fade_to_black"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.0333333, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_hu21x"]
resource_name = "fade_to_normal"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5unk6"]
_data = {
"RESET": SubResource("Animation_h7ire"),
"fade_to_black": SubResource("Animation_pl2nk"),
"fade_to_normal": SubResource("Animation_hu21x")
}

[sub_resource type="Animation" id="Animation_aljtl"]
resource_name = "PackOpening"
length = 1.3667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0.345098), Color(1, 1, 1, 0.345098)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BasicPackOpening/HandReroll:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"BasicPackOpening"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("BasicPackOpening/HandReroll:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.19583, 1.29583),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13]
}

[sub_resource type="Animation" id="Animation_t3dow"]
resource_name = "PackOpening_Bino"
length = 1.3667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0.345098), Color(1, 1, 1, 0.345098)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BasicPackOpening/HandReroll:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Bino"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("BasicPackOpening/HandReroll:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.19583, 1.29583),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13]
}

[sub_resource type="Animation" id="Animation_otdxn"]
resource_name = "PackOpening_Life"
length = 1.3667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0.345098), Color(1, 1, 1, 0.345098)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BasicPackOpening/HandReroll:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"LifeLine"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("BasicPackOpening/HandReroll:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.19583, 1.29583),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13]
}

[sub_resource type="Animation" id="Animation_n8q65"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0.345098)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BasicPackOpening/HandReroll:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("BasicPackOpening/HandReroll:animation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Bino"]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_p0bwk"]
_data = {
"PackOpening": SubResource("Animation_aljtl"),
"PackOpening_Bino": SubResource("Animation_t3dow"),
"PackOpening_Life": SubResource("Animation_otdxn"),
"RESET": SubResource("Animation_n8q65")
}

[sub_resource type="AtlasTexture" id="AtlasTexture_jmhnj"]
atlas = ExtResource("2_rxadj")
region = Rect2(0, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_6n3av"]
atlas = ExtResource("2_rxadj")
region = Rect2(256, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_y57ng"]
atlas = ExtResource("2_rxadj")
region = Rect2(512, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_guec7"]
atlas = ExtResource("2_rxadj")
region = Rect2(768, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_7rqpn"]
atlas = ExtResource("2_rxadj")
region = Rect2(1024, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_g1bbh"]
atlas = ExtResource("2_rxadj")
region = Rect2(1280, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_emtcx"]
atlas = ExtResource("2_rxadj")
region = Rect2(1536, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_c8khg"]
atlas = ExtResource("2_rxadj")
region = Rect2(1792, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_sf4l0"]
atlas = ExtResource("2_rxadj")
region = Rect2(2048, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_hcv8o"]
atlas = ExtResource("2_rxadj")
region = Rect2(2304, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_gjode"]
atlas = ExtResource("2_rxadj")
region = Rect2(2560, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_233y3"]
atlas = ExtResource("2_rxadj")
region = Rect2(2816, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_uq28l"]
atlas = ExtResource("2_rxadj")
region = Rect2(3072, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_qejfr"]
atlas = ExtResource("2_rxadj")
region = Rect2(3328, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_toklj"]
atlas = ExtResource("3_vlid8")
region = Rect2(0, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_pg3xm"]
atlas = ExtResource("3_vlid8")
region = Rect2(256, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_npcke"]
atlas = ExtResource("3_vlid8")
region = Rect2(512, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_sdgwy"]
atlas = ExtResource("3_vlid8")
region = Rect2(768, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_6rq3i"]
atlas = ExtResource("3_vlid8")
region = Rect2(1024, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_02x4t"]
atlas = ExtResource("3_vlid8")
region = Rect2(1280, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_h77ko"]
atlas = ExtResource("3_vlid8")
region = Rect2(1536, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_n6atl"]
atlas = ExtResource("3_vlid8")
region = Rect2(1792, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_g1alw"]
atlas = ExtResource("3_vlid8")
region = Rect2(2048, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_npyc6"]
atlas = ExtResource("3_vlid8")
region = Rect2(2304, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_vybxv"]
atlas = ExtResource("3_vlid8")
region = Rect2(2560, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_v302f"]
atlas = ExtResource("3_vlid8")
region = Rect2(2816, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_fuga8"]
atlas = ExtResource("3_vlid8")
region = Rect2(3072, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_o5218"]
atlas = ExtResource("3_vlid8")
region = Rect2(3328, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_agvye"]
atlas = ExtResource("3_sool3")
region = Rect2(0, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_nde4r"]
atlas = ExtResource("3_sool3")
region = Rect2(256, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_ugfkk"]
atlas = ExtResource("3_sool3")
region = Rect2(512, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_h2gkr"]
atlas = ExtResource("3_sool3")
region = Rect2(768, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_u8t3a"]
atlas = ExtResource("3_sool3")
region = Rect2(1024, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_aap7b"]
atlas = ExtResource("3_sool3")
region = Rect2(1280, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_0efbu"]
atlas = ExtResource("3_sool3")
region = Rect2(1536, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_qy82h"]
atlas = ExtResource("3_sool3")
region = Rect2(1792, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_j31i0"]
atlas = ExtResource("3_sool3")
region = Rect2(2048, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_ajw3f"]
atlas = ExtResource("3_sool3")
region = Rect2(2304, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_pugmw"]
atlas = ExtResource("3_sool3")
region = Rect2(2560, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_lntbw"]
atlas = ExtResource("3_sool3")
region = Rect2(2816, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_cxpxs"]
atlas = ExtResource("3_sool3")
region = Rect2(3072, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_j1ftr"]
atlas = ExtResource("3_sool3")
region = Rect2(3328, 0, 256, 256)

[sub_resource type="SpriteFrames" id="SpriteFrames_0cfth"]
animations = [{
"frames": [{
"duration": 0.5,
"texture": SubResource("AtlasTexture_jmhnj")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_6n3av")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_y57ng")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_guec7")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_7rqpn")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_g1bbh")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_emtcx")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_c8khg")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_sf4l0")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_hcv8o")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_gjode")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_233y3")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_uq28l")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_qejfr")
}],
"loop": false,
"name": &"BasicPackOpening",
"speed": 5.0
}, {
"frames": [{
"duration": 0.5,
"texture": SubResource("AtlasTexture_toklj")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_pg3xm")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_npcke")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_sdgwy")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_6rq3i")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_02x4t")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_h77ko")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_n6atl")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_g1alw")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_npyc6")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_vybxv")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_v302f")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_fuga8")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_o5218")
}],
"loop": false,
"name": &"Bino",
"speed": 5.0
}, {
"frames": [{
"duration": 0.5,
"texture": SubResource("AtlasTexture_agvye")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_nde4r")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_ugfkk")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_h2gkr")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_u8t3a")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_aap7b")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_0efbu")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_qy82h")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_j31i0")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_ajw3f")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_pugmw")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_lntbw")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_cxpxs")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_j1ftr")
}],
"loop": false,
"name": &"LifeLine",
"speed": 5.0
}]

[node name="DayScreen" type="CanvasLayer"]
script = ExtResource("1_67foy")

[node name="ColorRect" type="ColorRect" parent="."]
modulate = Color(1, 1, 1, 0.345098)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 1)

[node name="SkipAnim" type="Button" parent="ColorRect"]
layout_mode = 0
offset_right = 961.0
offset_bottom = 540.0

[node name="Label" type="Label" parent="ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -8.5
offset_right = 20.0
offset_bottom = 8.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 50
text = "Day 1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label" type="Label" parent="ColorRect/Label"]
layout_mode = 0
offset_left = -50.5
offset_top = 56.5
offset_right = 251.5
offset_bottom = 110.5
theme_override_colors/font_color = Color(0.907811, 0.121711, 0, 1)
text = "500 Coins due in 5 days"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_5unk6")
}

[node name="BasicPackOpening" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_p0bwk")
}

[node name="HandReroll" type="AnimatedSprite2D" parent="BasicPackOpening"]
visible = false
position = Vector2(482, 262)
sprite_frames = SubResource("SpriteFrames_0cfth")
animation = &"Bino"

[connection signal="pressed" from="ColorRect/SkipAnim" to="." method="_on_skip_anim_pressed"]
